fix jvm-opts